# neon

./: .gitignore
binaries/lib-vc2015/win32/Debug/: run.bat
build-androidstudio/Neon/app/: CMakeLists.txt  build.gradle
build-androidstudio/Neon/app/src/androidTest/java/com/xiphos/neon/: ExampleInstrumentedTest.java
build-androidstudio/Neon/app/src/main/: AndroidManifest.xml
build-androidstudio/Neon/app/src/main/cpp/: native-lib.cpp
build-androidstudio/Neon/app/src/main/cpp/SDL2/src/core/android/: SDL_android.c
build-androidstudio/Neon/app/src/main/cpp/SDL2/src/events/: SDL_touch_c.h
build-androidstudio/Neon/app/src/main/cpp/SDL2/src/main/android/: SDL_android_main.c
build-androidstudio/Neon/app/src/main/cpp/SDL2/src/video/android/: SDL_androidevents.c
build-androidstudio/Neon/app/src/main/java/com/xiphos/neon/: SDLActivity.java
build-androidstudio/Neon/app/src/main/res/layout/: activity_sdl.xml
build-androidstudio/Neon/app/src/main/res/values/: styles.xml
build-androidstudio/Neon/app/src/test/java/com/xiphos/neon/: ExampleUnitTest.java
build-androidstudio/Neon/gradle/wrapper/: gradle-wrapper.properties
build-vs2015/: neon.sln
build-vs2015/neon-core/: neon-core.vcxproj  neon-core.vcxproj.filters
build-vs2015/sandbox-testing/: sandbox-testing.vcxproj  sandbox-testing.vcxproj.filters
neon/: readme.txt
neon/core/engine/: application.h  camera.cpp  camera.h  camera_base.cpp  camera_base.h  common.cpp  common.h  defines.h  engine.cpp  engine.h  main.cpp  orbit_camera.cpp  orbit_camera.h
neon/core/glad/: glad.c  glad.h  glad_egl.c  glad_egl.h
neon/core/interface/: glfw_interface.cpp  glfw_interface.h  neon_interface.cpp  neon_interface.h  sdl2_interface.cpp  sdl2_interface.h
neon/core/renderer/: model.cpp  model.h  model_manager.cpp  model_manager.h  note_glsl_version_details.txt  opengl_header.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  todo.txt
neon/sandbox/: application.cpp  test_application.cpp  test_application.h  test_lighting.cpp  test_lighting.h  test_objects.cpp  test_objects.h  test_simpletriangle.cpp  test_simpletriangle.h  test_texturetriangle.cpp  test_texturetriangle.h
resources/shaders/: base.frag  base.vert
resources/shaders/v140/: base.frag  base.vert  lighting01.vert  lighting01_onlydiffuse.frag  phong.frag  phong.vert  simple_multitexture.frag  simple_mvp.frag  simpletexture.vert  simpletexture_withvertexcolor.frag  simpletexture_withvertexcolor.vert  solid.frag  solid.vert
resources/shaders/v300es/: lighting01.frag  lighting01.vert  solid.frag  solid.vert
